data_imported_successfully

--- a/03_02/03_02 Read from CSV.ipynb
+++ b/03_02/03_02 Read from CSV.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,11 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pd.read"
+    "data = pd.read_csv('../data/BankChurners_v2.csv')"
    ]
   },
   {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "(10127, 23)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,6 +331,32 @@
        "      <td>0.000022</td>\n",
        "      <td>0.99998</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>90037</td>\n",
+       "      <td>Existing Customer</td>\n",
+       "      <td>44</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>$40K - $60K</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>36</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4010.0</td>\n",
+       "      <td>1247</td>\n",
+       "      <td>2763.0</td>\n",
+       "      <td>1.376</td>\n",
+       "      <td>1088</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.846</td>\n",
+       "      <td>0.311</td>\n",
+       "      <td>0.000055</td>\n",
+       "      <td>0.99994</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -342,6 +368,7 @@
        "2      90034  Existing Customer            51      M                3   \n",
        "3      90035  Existing Customer            40      F                4   \n",
        "4      90036  Existing Customer            40      M                3   \n",
+       "5      90037  Existing Customer            44      M                2   \n",
        "\n",
        "  Education_Level Marital_Status Income_Category Card_Category  \\\n",
        "0     High School        Married     $60K - $80K          Blue   \n",
@@ -349,6 +376,7 @@
        "2        Graduate        Married    $80K - $120K          Blue   \n",
        "3     High School            NaN  Less than $40K          Blue   \n",
        "4      Uneducated        Married     $60K - $80K          Blue   \n",
+       "5        Graduate        Married     $40K - $60K          Blue   \n",
        "\n",
        "   Months_on_book  Total_Relationship_Count  Months_Inactive_12_mon  \\\n",
        "0              39                         5                       1   \n",
@@ -356,6 +384,7 @@
        "2              36                         4                       1   \n",
        "3              34                         3                       4   \n",
        "4              21                         5                       1   \n",
+       "5              36                         3                       1   \n",
        "\n",
        "   Contacts_Count_12_mon  Credit_Limit  Total_Revolving_Bal  Avg_Open_To_Buy  \\\n",
        "0                      3       12691.0                  777          11914.0   \n",
@@ -363,6 +392,7 @@
        "2                      0        3418.0                    0           3418.0   \n",
        "3                      1        3313.0                 2517            796.0   \n",
        "4                      0        4716.0                    0           4716.0   \n",
+       "5                      2        4010.0                 1247           2763.0   \n",
        "\n",
        "   Total_Amt_Chng_Q4_Q1  Total_Trans_Amt  Total_Trans_Ct  Total_Ct_Chng_Q4_Q1  \\\n",
        "0                 1.335             1144              42                1.625   \n",
@@ -370,6 +400,7 @@
        "2                 2.594             1887              20                2.333   \n",
        "3                 1.405             1171              20                2.333   \n",
        "4                 2.175              816              28                2.500   \n",
+       "5                 1.376             1088              24                0.846   \n",
        "\n",
        "   Avg_Utilization_Ratio  \\\n",
        "0                  0.061   \n",
@@ -377,6 +408,7 @@
        "2                  0.000   \n",
        "3                  0.760   \n",
        "4                  0.000   \n",
+       "5                  0.311   \n",
        "\n",
        "   Naive_Bayes_Classifier_Attrition_Flag_Card_Category_Contacts_Count_12_mon_Dependent_count_Education_Level_Months_Inactive_12_mon_1  \\\n",
        "0                                           0.000093                                                                                    \n",
@@ -384,13 +416,15 @@
        "2                                           0.000021                                                                                    \n",
        "3                                           0.000134                                                                                    \n",
        "4                                           0.000022                                                                                    \n",
+       "5                                           0.000055                                                                                    \n",
        "\n",
        "   Naive_Bayes_Classifier_Attrition_Flag_Card_Category_Contacts_Count_12_mon_Dependent_count_Education_Level_Months_Inactive_12_mon_2  \n",
        "0                                            0.99991                                                                                   \n",
        "1                                            0.99994                                                                                   \n",
        "2                                            0.99998                                                                                   \n",
        "3                                            0.99987                                                                                   \n",
-       "4                                            0.99998                                                                                   "
+       "4                                            0.99998                                                                                   \n",
+       "5                                            0.99994                                                                                   "
       ]
      },
      "execution_count": 6,
@@ -399,8 +433,44 @@
     }
    ],
    "source": [
-    "data.head()"
+    "data.head(6)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['CLIENTNUM', 'Attrition_Flag', 'Customer_Age', 'Gender',\n",
+       "       'Dependent_count', 'Education_Level', 'Marital_Status',\n",
+       "       'Income_Category', 'Card_Category', 'Months_on_book',\n",
+       "       'Total_Relationship_Count', 'Months_Inactive_12_mon',\n",
+       "       'Contacts_Count_12_mon', 'Credit_Limit', 'Total_Revolving_Bal',\n",
+       "       'Avg_Open_To_Buy', 'Total_Amt_Chng_Q4_Q1', 'Total_Trans_Amt',\n",
+       "       'Total_Trans_Ct', 'Total_Ct_Chng_Q4_Q1', 'Avg_Utilization_Ratio',\n",
+       "       'Naive_Bayes_Classifier_Attrition_Flag_Card_Category_Contacts_Count_12_mon_Dependent_count_Education_Level_Months_Inactive_12_mon_1',\n",
+       "       'Naive_Bayes_Classifier_Attrition_Flag_Card_Category_Contacts_Count_12_mon_Dependent_count_Education_Level_Months_Inactive_12_mon_2'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -419,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
